@@ -19,6 +19,10 @@
 #include <openssl/ripemd.h>
 #include <openssl/sha.h>
 
+#if (OPENSSL_VERSION_NUMBER >= 0x10100000L) && !defined LIBRESSL_VERSION_NUMBER
+#define HAVE_OPAQUE_STRUCTS 1
+#endif
+
 extern "C" {
   #include "lua.h"
   #include "lauxlib.h"
@@ -281,17 +285,32 @@ static int l_digest(lua_State *L)     /** digest(string algorithm, string messag
   const unsigned char *msg = (unsigned char *) luaL_checklstring( L, 2, &msg_len );
   unsigned char digest[EVP_MAX_MD_SIZE];
   const EVP_MD * evp_md;
-#if OPENSSL_VERSION_NUMBER < 0x10100000L
-  EVP_MD_CTX mdctx;
-#else
+#if HAVE_OPAQUE_STRUCTS
   EVP_MD_CTX *mdctx = EVP_MD_CTX_new();
+#else
+  EVP_MD_CTX mdctx;
 #endif
 
   evp_md = EVP_get_digestbyname( algorithm );
 
   if (!evp_md) return luaL_error( L, "Unknown digest algorithm: %s", algorithm );
 
-#if OPENSSL_VERSION_NUMBER < 0x10100000L
+#if HAVE_OPAQUE_STRUCTS
+  EVP_MD_CTX_reset(mdctx);
+  if (!(
+      EVP_DigestInit_ex( mdctx, evp_md, NULL ) &&
+      EVP_DigestUpdate( mdctx, msg, msg_len ) &&
+      EVP_DigestFinal_ex( mdctx, digest, &digest_len ))) {
+    /* EVP_MD_CTX_cleanup deprecated in OpenSSL 1.1 _ EVP_MD_CTX_reset()
+    should be called instead to reinitialise an already created structure. */
+    EVP_MD_CTX_reset( mdctx );
+    unsigned long e = ERR_get_error();
+    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
+                       ERR_func_error_string(e), ERR_reason_error_string(e));
+  }
+  /* EVP_MD_CTX_cleanup deprecated in OpenSSL 1.1 */
+  EVP_MD_CTX_reset( mdctx );
+#else
   EVP_MD_CTX_init(&mdctx);
   if (!(
       EVP_DigestInit_ex( &mdctx, evp_md, NULL ) &&
@@ -303,21 +322,6 @@ static int l_digest(lua_State *L)     /** digest(string algorithm, string messag
                        ERR_func_error_string(e), ERR_reason_error_string(e));
   }
   EVP_MD_CTX_cleanup( &mdctx );
-#else
-  EVP_MD_CTX_reset(mdctx);
-  if (!(
-      EVP_DigestInit_ex( mdctx, evp_md, NULL ) &&
-      EVP_DigestUpdate( mdctx, msg, msg_len ) &&
-      EVP_DigestFinal_ex( mdctx, digest, &digest_len ))) {
-    /* EVP_MD_CTX_cleanup deprecated in OpenSSL 1.1 _ EVP_MD_CTX_reset() 
-    should be called instead to reinitialise an already created structure. */
-    EVP_MD_CTX_reset( mdctx );
-    unsigned long e = ERR_get_error();
-    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
-                       ERR_func_error_string(e), ERR_reason_error_string(e));
-  }
-  /* EVP_MD_CTX_cleanup deprecated in OpenSSL 1.1 */
-  EVP_MD_CTX_reset( mdctx );
 #endif
 
   lua_pushlstring( L, (char *) digest, digest_len );
@@ -394,7 +398,51 @@ static int l_encrypt(lua_State *L) /** encrypt( string algorithm, string key, st
   if (iv[0] == '\0')
     iv = NULL;
 
-#if OPENSSL_VERSION_NUMBER < 0x10100000L
+#if HAVE_OPAQUE_STRUCTS
+  EVP_CIPHER_CTX *cipher_ctx = EVP_CIPHER_CTX_new();
+  /* EVP_CIPHER_CTX_init remains as an alias for EVP_CIPHER_CTX_reset()
+  in OpenSSL 1.1.0. As this symbol was missing in the static library,
+  I replaced it with EVP_CIPHER_CTX_reset */
+  EVP_CIPHER_CTX_reset( cipher_ctx );
+
+  /* First create the cipher context, then set the key length and padding, and
+     check the iv length. Below we set the key and iv. */
+  if (!(
+      EVP_EncryptInit_ex( cipher_ctx, evp_cipher, NULL, NULL, NULL ) &&
+      EVP_CIPHER_CTX_set_key_length( cipher_ctx, key_len ) &&
+      EVP_CIPHER_CTX_set_padding( cipher_ctx, padding ))) {
+    unsigned long e = ERR_get_error();
+    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
+                       ERR_func_error_string(e), ERR_reason_error_string(e));
+  }
+
+  if (iv != NULL && (int) iv_len != EVP_CIPHER_CTX_iv_length( cipher_ctx )) {
+    return luaL_error( L, "Length of iv is %d; should be %d",
+      (int) iv_len, EVP_CIPHER_CTX_iv_length( cipher_ctx ));
+  }
+
+  int out_len, final_len;
+  unsigned char * out = (unsigned char *) malloc( data_len + EVP_MAX_BLOCK_LENGTH );
+  if (!out) return luaL_error( L, "Couldn't allocate memory.");
+
+  if (!(
+      EVP_EncryptInit_ex( cipher_ctx, NULL, NULL, key, iv ) &&
+      EVP_EncryptUpdate( cipher_ctx, out, &out_len, data, data_len ) &&
+      EVP_EncryptFinal_ex( cipher_ctx, out + out_len, &final_len ) )) {
+    /* EVP_CIPHER_CTX_cleanup is now deprecated in OpenSSL 1.1 _ replaced by
+      EVP_CIPHER_CTX_reset (same args & return value) */
+    EVP_CIPHER_CTX_reset( cipher_ctx );
+    free( out );
+    unsigned long e = ERR_get_error();
+    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
+                       ERR_func_error_string(e), ERR_reason_error_string(e));
+  }
+
+  lua_pushlstring( L, (char *) out, out_len + final_len );
+
+  /* EVP_CIPHER_CTX_cleanup deprecated in OpenSSL 1.1 */
+  EVP_CIPHER_CTX_reset( cipher_ctx );
+#else
   EVP_CIPHER_CTX cipher_ctx;
   EVP_CIPHER_CTX_init( &cipher_ctx );
 
@@ -432,50 +480,6 @@ static int l_encrypt(lua_State *L) /** encrypt( string algorithm, string key, st
   lua_pushlstring( L, (char *) out, out_len + final_len );
 
   EVP_CIPHER_CTX_cleanup( &cipher_ctx );
-#else
-  EVP_CIPHER_CTX *cipher_ctx = EVP_CIPHER_CTX_new();
-  /* EVP_CIPHER_CTX_init remains as an alias for EVP_CIPHER_CTX_reset() 
-  in OpenSSL 1.1.0. As this symbol was missing in the static library,
-  I replaced it with EVP_CIPHER_CTX_reset */
-  EVP_CIPHER_CTX_reset( cipher_ctx );
-
-  /* First create the cipher context, then set the key length and padding, and
-     check the iv length. Below we set the key and iv. */
-  if (!(
-      EVP_EncryptInit_ex( cipher_ctx, evp_cipher, NULL, NULL, NULL ) &&
-      EVP_CIPHER_CTX_set_key_length( cipher_ctx, key_len ) &&
-      EVP_CIPHER_CTX_set_padding( cipher_ctx, padding ))) {
-    unsigned long e = ERR_get_error();
-    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
-                       ERR_func_error_string(e), ERR_reason_error_string(e));
-  }
-
-  if (iv != NULL && (int) iv_len != EVP_CIPHER_CTX_iv_length( cipher_ctx )) {
-    return luaL_error( L, "Length of iv is %d; should be %d",
-      (int) iv_len, EVP_CIPHER_CTX_iv_length( cipher_ctx ));
-  }
-
-  int out_len, final_len;
-  unsigned char * out = (unsigned char *) malloc( data_len + EVP_MAX_BLOCK_LENGTH );
-  if (!out) return luaL_error( L, "Couldn't allocate memory.");
-
-  if (!(
-      EVP_EncryptInit_ex( cipher_ctx, NULL, NULL, key, iv ) &&
-      EVP_EncryptUpdate( cipher_ctx, out, &out_len, data, data_len ) &&
-      EVP_EncryptFinal_ex( cipher_ctx, out + out_len, &final_len ) )) {
-    /* EVP_CIPHER_CTX_cleanup is now deprecated in OpenSSL 1.1 _ replaced by 
-      EVP_CIPHER_CTX_reset (same args & return value) */
-    EVP_CIPHER_CTX_reset( cipher_ctx );
-    free( out );
-    unsigned long e = ERR_get_error();
-    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
-                       ERR_func_error_string(e), ERR_reason_error_string(e));
-  }
-
-  lua_pushlstring( L, (char *) out, out_len + final_len );
-
-  /* EVP_CIPHER_CTX_cleanup deprecated in OpenSSL 1.1 */
-  EVP_CIPHER_CTX_reset( cipher_ctx );
 #endif
   free( out );
 
@@ -496,45 +500,9 @@ static int l_decrypt(lua_State *L) /** decrypt( string algorithm, string key, st
   if (iv[0] == '\0')
     iv = NULL;
 
-#if OPENSSL_VERSION_NUMBER < 0x10100000L
-  EVP_CIPHER_CTX cipher_ctx;
-  EVP_CIPHER_CTX_init( &cipher_ctx );
-
-  if (!(
-      EVP_DecryptInit_ex( &cipher_ctx, evp_cipher, NULL, NULL, NULL ) &&
-      EVP_CIPHER_CTX_set_key_length( &cipher_ctx, key_len ) &&
-      EVP_CIPHER_CTX_set_padding( &cipher_ctx, padding ))) {
-    unsigned long e = ERR_get_error();
-    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
-                       ERR_func_error_string(e), ERR_reason_error_string(e));
-  }
-
-  if (iv != NULL && (int) iv_len != EVP_CIPHER_CTX_iv_length( &cipher_ctx )) {
-    return luaL_error( L, "Length of iv is %d; should be %d",
-      (int) iv_len, EVP_CIPHER_CTX_iv_length( &cipher_ctx ));
-  }
-
-  int out_len, final_len;
-  unsigned char * out = (unsigned char *) malloc( data_len );
-  if (!out) return luaL_error( L, "Couldn't allocate memory.");
-
-  if (!(
-      EVP_DecryptInit_ex( &cipher_ctx, NULL, NULL, key, iv ) &&
-      EVP_DecryptUpdate( &cipher_ctx, out, &out_len, data, data_len ) &&
-      EVP_DecryptFinal_ex( &cipher_ctx, out + out_len, &final_len ) )) {
-    EVP_CIPHER_CTX_cleanup( &cipher_ctx );
-    free( out );
-    unsigned long e = ERR_get_error();
-    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
-                       ERR_func_error_string(e), ERR_reason_error_string(e));
-  }
-
-  lua_pushlstring( L, (char *) out, out_len + final_len );
-
-  EVP_CIPHER_CTX_cleanup( &cipher_ctx );
-#else
+#if HAVE_OPAQUE_STRUCTS
   EVP_CIPHER_CTX *cipher_ctx = EVP_CIPHER_CTX_new();
-  /* EVP_CIPHER_CTX_init remains as an alias for EVP_CIPHER_CTX_reset() 
+  /* EVP_CIPHER_CTX_init remains as an alias for EVP_CIPHER_CTX_reset()
   in OpenSSL 1.1.0. As this symbol was missing in the static library,
   I replaced it with EVP_CIPHER_CTX_reset */
   EVP_CIPHER_CTX_reset( cipher_ctx );
@@ -573,6 +541,42 @@ static int l_decrypt(lua_State *L) /** decrypt( string algorithm, string key, st
 
   /* EVP_CIPHER_CTX_cleanup deprecated in OpenSSL 1.1 */
   EVP_CIPHER_CTX_reset( cipher_ctx );
+#else
+  EVP_CIPHER_CTX cipher_ctx;
+  EVP_CIPHER_CTX_init( &cipher_ctx );
+
+  if (!(
+      EVP_DecryptInit_ex( &cipher_ctx, evp_cipher, NULL, NULL, NULL ) &&
+      EVP_CIPHER_CTX_set_key_length( &cipher_ctx, key_len ) &&
+      EVP_CIPHER_CTX_set_padding( &cipher_ctx, padding ))) {
+    unsigned long e = ERR_get_error();
+    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
+                       ERR_func_error_string(e), ERR_reason_error_string(e));
+  }
+
+  if (iv != NULL && (int) iv_len != EVP_CIPHER_CTX_iv_length( &cipher_ctx )) {
+    return luaL_error( L, "Length of iv is %d; should be %d",
+      (int) iv_len, EVP_CIPHER_CTX_iv_length( &cipher_ctx ));
+  }
+
+  int out_len, final_len;
+  unsigned char * out = (unsigned char *) malloc( data_len );
+  if (!out) return luaL_error( L, "Couldn't allocate memory.");
+
+  if (!(
+      EVP_DecryptInit_ex( &cipher_ctx, NULL, NULL, key, iv ) &&
+      EVP_DecryptUpdate( &cipher_ctx, out, &out_len, data, data_len ) &&
+      EVP_DecryptFinal_ex( &cipher_ctx, out + out_len, &final_len ) )) {
+    EVP_CIPHER_CTX_cleanup( &cipher_ctx );
+    free( out );
+    unsigned long e = ERR_get_error();
+    return luaL_error( L, "OpenSSL error %d in %s: function %s: %s", e, ERR_lib_error_string(e),
+                       ERR_func_error_string(e), ERR_reason_error_string(e));
+  }
+
+  lua_pushlstring( L, (char *) out, out_len + final_len );
+
+  EVP_CIPHER_CTX_cleanup( &cipher_ctx );
 #endif
   free( out );
 
@@ -687,9 +691,9 @@ LUALIB_API int luaopen_openssl(lua_State *L) {
 #if OPENSSL_VERSION_NUMBER < 0x10100000L
   ERR_load_crypto_strings();
 #else
-  /* This is now deprecated in OpenSSL 1.1.0 _ No explicit initialisation 
+  /* This is now deprecated in OpenSSL 1.1.0 _ No explicit initialisation
     or de-initialisation is necessary */
-  // ERR_load_crypto_strings(); 
+  // ERR_load_crypto_strings();
 #endif
 
   luaL_newlib(L, openssllib);
